added changes in pom xml file